Archive2/24/be70a54bd1a474/output
main.cpp: In member function 'void A<B>::Foo(B&)':
main.cpp:20:59: error: insufficient contextual information to determine type
        static_assert(std::is_same<get_arg(std::declval<B>.Bar(value))::value, decltype(value)>::value, "");
                                                           ^
main.cpp:20:94: error: wrong number of template arguments (1, should be 2)
        static_assert(std::is_same<get_arg(std::declval<B>.Bar(value))::value, decltype(value)>::value, "");
                                                                                              ^
In file included from /usr/local/include/c++/4.9.0/bits/move.h:57:0,
                 from /usr/local/include/c++/4.9.0/bits/stl_pair.h:59,
                 from /usr/local/include/c++/4.9.0/bits/stl_algobase.h:64,
                 from /usr/local/include/c++/4.9.0/bits/char_traits.h:39,
                 from /usr/local/include/c++/4.9.0/ios:40,
                 from /usr/local/include/c++/4.9.0/ostream:38,
                 from /usr/local/include/c++/4.9.0/iostream:39,
                 from main.cpp:1:
/usr/local/include/c++/4.9.0/type_traits:896:12: error: provided for 'template<class, class> struct std::is_same'
     struct is_same;
            ^
